# sf-asset-service

./: .gitignore  LICENSE  README.md  dbreset.py  pyproject.toml  run.cmd
sfasset_service/: __init__.py  cli.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
sfasset_service/routers/: assetbranches.py  assetfiles.py  assetlinks.py  assets.py  assettags.py  assetversions.py  conf.py  entities.py  items.py  projects.py  spaces.py  users.py
src/python/sfasset_service_old/: __init__.py  app.py  db.py  models.py
src/python/sfasset_service_old/asset_types/: asset_type_controller.py
src/python/sfasset_service_old/assets/: asset_controller.py
src/python/sfasset_service_old/attrs/: attr_controller.py
src/python/sfasset_service_old/entities/: entity_controller.py
src/python/sfasset_service_old/files/: file_controller.py
src/python/sfasset_service_old/spaces/: space_controller.py
tests/: test_app.py  test_entities.py
