[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sfasset_service"
dynamic = ["version"]
dependencies = [
  "fastapi",
  "uvicorn",
  "SQLAlchemy",
  "psycopg2",
  "click"
]
requires-python = ">=3.8"
description = "SF Asset Service for storign digital assets for productions"
readme = "README.md"
authors = [
    { name = "Sven Fraeys", email = "sven.fraeys@gmail.com" },
]

[project.scripts]
sfassetservice = "sfasset_service.cli:cli"